--- a/css/styles.css
+++ b/css/styles.css
@@ -10128,6 +10128,7 @@ header.masthead h1 {
 
 .bordered {
   border-bottom: 2px dotted #fff;
+  padding-bottom: 15px;
 }
 
 .logo {
@@ -10160,4 +10161,126 @@ header.masthead h1 {
 
 .btncolor {
   background: #4169e1;
+}
+
+/*Neon Button Effect*/
+
+#btnmain {
+      position: relative;
+      display: inline-block;
+      padding: 15px 30px;
+      color: #2196f3;
+      text-transform: uppercase;
+      letter-spacing: 4px;
+      text-decoration: none;
+      font-size: 24px;
+      overflow: hidden;
+      transition: 0.2s;
+      font-weight: bold;
+    }
+
+    #btnmain:hover {
+      color: #255784;
+      background: #2196f3;
+      box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3;
+      transition-delay: 1s;
+
+    }
+
+    #btnmain span {
+      position: absolute;
+      display: block;
+    }
+
+    #btnmain span:nth-child(1) {
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 2px;
+      background: linear-gradient(90deg, transparent, #2196f3);
+    }
+
+    #btnmain:hover span:nth-child(1) {
+      left: 100%;
+      transition: 1s;
+    }
+
+    #btnmain span:nth-child(3) {
+      bottom: 0;
+      right: -100%;
+      width: 100%;
+      height: 2px;
+      background: linear-gradient(270deg, transparent, #2196f3);
+    }
+
+    #btnmain:hover span:nth-child(3) {
+      right: 100%;
+      transition: 1s;
+      transition-delay: 0.5s;
+    }
+
+    #btnmain span:nth-child(2) {
+      top: -100%;
+      right: 0;
+      width: 2px;
+      height: 100%;
+      background: linear-gradient(180deg, transparent, #2196f3);
+    }
+
+    #btnmain:hover span:nth-child(2) {
+      top: 100%;
+      transition: 1s;
+      transition-delay: 0.25s;
+    }
+
+    #btnmain span:nth-child(4) {
+      bottom: -100%;
+      right: 0;
+      width: 2px;
+      height: 100%;
+      background: linear-gradient(360deg, transparent, #2196f3);
+    }
+
+    #btnmain:hover span:nth-child(4) {
+      bottom: 100%;
+      transition: 1s;
+      transition-delay: 0.75s;
+    }
+
+/*End Section*/
+
+/*FOOTER*/
+
+footer {
+  background: #16222A;
+  background: -webkit-linear-gradient(59deg, #800080, #3A6073, #16222A, #800080);
+  background: linear-gradient(59deg, #800079, #3A6073, #16222A, #800080);
+  color: white;
+  margin-top:100px;
+}
+
+footer a {
+  color: #fff;
+  font-size: 14px;
+  transition-duration: 0.2s;
+}
+
+footer a:hover {
+  color: #FA944B;
+  text-decoration: none;
+}
+
+.copy {
+  font-size: 12px;
+  padding: 10px;
+  border-top: 1px solid #FFFFFF;
+}
+
+.footer-middle {
+  padding-top: 2em;
+  color: white;
+}
+
+.text-shadow {
+  text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
 }
