--- a/css/styles.css
+++ b/css/styles.css
@@ -6067,7 +6067,10 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #800080 !important;
+  /*background-color: #800080 !important;*/
+  background: #16222A;
+  background: -webkit-linear-gradient(59deg, #800080, #3A6073, #16222A, #800080);
+  background: linear-gradient(59deg, #800079, #3A6073, #16222A, #800080);
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
